@@ -1495,6 +1495,48 @@ static char * mini_ok_xpm[] = {
 };
 
 /* XPM */
+static char * imgload_on_xpm[] = {
+"15 15 2 1",
+"       c #00000000CF3C",
+".      c #FFFFFFFFFFFF",
+" . .  .........",
+" .     ...   ..",
+" .   . ... ....",
+" . ... .. .....",
+" .....  . ..  .",
+".........  .. .",
+"..........    .",
+"...............",
+".   ...........",
+". .  .  .. ....",
+". .. .     ....",
+". .. . .  .....",
+".    . .  .....",
+"...............",
+"..............."};
+
+/* XPM */
+static char * imgload_off_xpm[] = {
+"15 15 2 1",
+"       c #CF3C00000000",
+".      c #FFFFFFFFFFFF",
+" .. . .........",
+" .    ..    ...",
+" .     . ......",
+" . . . . ..  ..",
+" . ...    .. ..",
+" ........    ..",
+"...............",
+"...............",
+"...............",
+"    ..  .  ....",
+" .     ..    ..",
+" . . .... .....",
+"   .    .   ...",
+"  ..  ...   ...",
+".... .... ....."};
+
+/* XPM */
 static char *left_i_xpm[] = {
 "22 22 3 1",
 "  c None",
